--- a/web-app/default.css
+++ b/web-app/default.css
@@ -1,21 +1,73 @@
+:root
+{
+    --game-rows: 4;
+    --game-columns: 3;
+
+    --header-height: 80px;
+    --aside-width: 180px;
+}
+
 body
 {
-    font-family: Helvetica, Arial, sans-serif;
     background-color: aquamarine;
+    font-family: Helvetica, Arial, sans-serif;
+    margin: 0;
 }
 
-#escape_list
+aside
 {
-    font-family: "Fira Sans";
+    background: #8f0;
+    height: calc(100% - var(--header-height));
+    position: absolute;
+    top: var(--header-height);
+    width: var(--aside-width);
+}
+/* Header */
+
+header
+{
+    background: #08f;
+    height: var(--header-height);
+    position: absolute;
+    width: 100%;
 }
 
-h1
-{
-    text-align: center;
+h1 {
     font-family: Impact;
+    text-align: center;
 }
 
-.highlight
+/* Main */
+
+main
 {
-    background-color: yellowgreen;
+    background: #f08;
+    position: absolute;
+    top: var(--header-height);
+    left: var(--aside-width);
+    width: calc(100% - var(--aside-width));
+    height: calc(100% - var(--header-height));
+}
+
+.game_board_container
+{
+    aspect-ratio: var(--game-columns) / var(--game-rows);
+    background: #f80;
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+}
+
+#game_board
+{
+    width: 100%;
+    height: 100%;
+    table-layout: fixed;
+    border-collapse: collapse;
+}
+
+#game_board td
+{
+    background-color: #0f8;
+    border: 1px solid black;
 }
