--- a/web-app/default.css
+++ b/web-app/default.css
@@ -1,23 +1,48 @@
 :root
 {
-    --game-rows: 4;
-    --game-columns: 3;
+    --game-columns: 5;
+    --game-rows: 5;
 
+    --aside-max-width: 300px;
+    --aside-min-width: 100px;
+    --aside-width: clamp(var(--aside-min-width), 30vw, var(--aside-max-width));
     --header-height: 80px;
-    --aside-width: 180px;
+
+    --button-border-width: 15px;
+    --button-border-radius: 12px;
+    --button-blur-width: 1px;
+    --button-lower-edge: 10px;
+    --button-press-depth: 5px;
+    --button-lower-edge-pressed: 5px; /* button-lower-edge - button-press-depth*/
+
+    --aside-background: #99a;
+    --main-background: #bbc;
+    --lit-inner-background: #f17;
+    --lit-outer-background: #a67;
+    --lit-background: #d47;
+    --lit-drop-shadow: #a35;
+    --lit-drop-glow: #f173;
+    --unlit-inner-background: #768;
+    --unlit-outer-background: #667;
+    --unlit-drop-shadow: #546;
+    
+    --header-color: var(--lit-inner-background);
+    --header-background: #000;
 }
 
 body
 {
-    background-color: aquamarine;
     font-family: Helvetica, Arial, sans-serif;
     margin: 0;
+    overflow: clip;
 }
 
 aside
 {
-    background: #8f0;
+    background: var(--aside-background);
     height: calc(100% - var(--header-height));
+    padding-left: 1em;
+    padding-right: 1em;
     position: absolute;
     top: var(--header-height);
     width: var(--aside-width);
@@ -26,7 +51,8 @@ aside
 
 header
 {
-    background: #08f;
+    background: var(--header-background);
+    color: var(--header-color);
     height: var(--header-height);
     position: absolute;
     width: 100%;
@@ -41,7 +67,7 @@ h1 {
 
 main
 {
-    background: #f08;
+    background: var(--main-background);
     position: absolute;
     top: var(--header-height);
     left: var(--aside-width);
@@ -52,7 +78,6 @@ main
 .game_board_container
 {
     aspect-ratio: var(--game-columns) / var(--game-rows);
-    background: #f80;
     max-width: 100%;
     max-height: 100%;
     margin: auto;
@@ -68,16 +93,47 @@ main
 
 #game_board td
 {
-    /* background-color: #0f8; */
-    border: 1px solid black;
+    border: var(--button-border-width) solid var(--main-background);
+    border-radius: var(--button-border-radius);
+}
+
+#game_board td:active
+{
+    position: relative;
+    top: var(--button-press-depth);
+    --button-lower-edge: var(--button-lower-edge-pressed);
 }
 
 .lit
 {
-    background: yellow;
+    /* background: var(--lit-background); */
+    background: radial-gradient(
+        var(--lit-inner-background),
+        var(--lit-outer-background)
+    );
+    filter: drop-shadow(
+        0
+        var(--button-lower-edge)
+        var(--button-lower-edge)
+        var(--lit-drop-glow)
+    ) drop-shadow(
+        0px
+        var(--button-lower-edge)
+        var(--button-blur-width)
+        var(--lit-drop-shadow)
+    );
 }
 
 .unlit
 {
-    background: midnightblue;
+    background: radial-gradient(
+        var(--unlit-inner-background),
+        var(--unlit-outer-background)
+    );
+    filter: drop-shadow(
+        0px
+        var(--button-lower-edge)
+        var(--button-blur-width)
+        var(--unlit-drop-shadow)
+    );
 }
