--- a/web-app/default.css
+++ b/web-app/default.css
@@ -65,3 +65,13 @@ td
 {
     border: 1px solid black;
 }
+
+.on
+{
+    background-color: yellow;
+}
+
+.off
+{
+    background-color: midnightblue;
+}
